--- a/style.css
+++ b/style.css
@@ -124,3 +124,21 @@ main {
 	text-align: center;
 	height: 100%;
 }
+
+@media (max-width: 1100px) {
+	main {
+		grid-template-columns: repeat(3, 1fr);
+	}
+}
+
+@media (max-width: 760px) {
+	main {
+		grid-template-columns: repeat(2, 1fr);
+	}
+}
+
+@media (max-width: 500px) {
+	main {
+		grid-template-columns: 1fr;
+	}
+}
