--- a/style.css
+++ b/style.css
@@ -67,6 +67,10 @@ select:focus {
 	width: 100%;
 }
 
+.text-box.show {
+	transform: translate(-50%, 0);
+}
+
 .text-box textarea {
 	border: 1px #dadada solid;
 	border-radius: 4px;
