pronunciando texto de cards

--- a/style.css
+++ b/style.css
@@ -111,6 +111,10 @@ main {
 	box-shadow: 0 0 10px 5px darksalmon;
 }
 
+.box.active {
+	box-shadow: 0 0 10px 5px darksalmon;
+}
+
 .box img {
 	width: 100%;
 	object-fit: cover;
